--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
+    "@mui/x-charts": "^7.17.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@types/react-leaflet": "^2.8.3",
+    "@types/react-select": "^5.0.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.2.1",
+    "leaflet": "^1.9.4",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
