--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
     "@mui/x-charts": "^7.17.0",
-    "@mui/x-date-pickers": "^7.17.0",
+    "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/select": "^2.2.7",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@types/react-leaflet": "^2.8.3",
     "@types/react-select": "^5.0.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.2.1",
+    "esri-leaflet-geocoder": "^3.1.4",
+    "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "next": "14.2.6",
     "react": "^18",
