--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^6.1.0",
     "@mui/x-charts": "^7.17.0",
     "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
     "next": "14.2.6",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
