--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.0",
+    "@mui/material": "^6.1.6",
     "@mui/x-charts": "^7.17.0",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/date-picker": "^2.1.8",
@@ -20,6 +20,7 @@
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@nivo/line": "^0.87.0",
     "@types/react-leaflet": "^2.8.3",
     "@types/react-select": "^5.0.0",
     "dayjs": "^1.11.13",
@@ -29,12 +30,15 @@
     "leaflet": "^1.9.4",
     "next": "14.2.6",
     "next-client-cookies": "^1.1.1",
+    "plotly.js": "^2.35.2",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
-    "react-select": "^5.8.0"
+    "react-plotly.js": "^2.6.0",
+    "react-select": "^5.8.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
