feat: add zoom information

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@nivo/line": "^0.87.0",
+    "@react-aria/i18n": "^3.12.3",
     "@types/react-leaflet": "^2.8.3",
     "@types/react-select": "^5.0.0",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.2.1",
     "esri-leaflet-geocoder": "^3.1.4",
@@ -42,8 +44,10 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/plotly.js": "^2.33.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-plotly.js": "^2.6.3",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
     "eslint": "^8",
