--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/date-picker": "^2.1.8",
     "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/react": "^2.6.5",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
