--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@types/react-select": "^5.0.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.13",
+    "downshift": "^9.0.8",
     "embla-carousel-react": "^8.2.1",
     "esri-leaflet-geocoder": "^3.1.4",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
-    "next": "14.2.6",
+    "next": "^14.2.21",
     "next-client-cookies": "^1.1.1",
     "plotly.js": "^2.35.2",
     "react": "^18",
@@ -40,7 +41,7 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0",
-    "react-select": "^5.8.0",
+    "react-select": "^5.9.0",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
