--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@nivo/line": "^0.87.0",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-aria/i18n": "^3.12.3",
     "@types/react-leaflet": "^2.8.3",
     "@types/react-select": "^5.0.0",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
     "downshift": "^9.0.8",
     "embla-carousel-react": "^8.2.1",
     "esri-leaflet-geocoder": "^3.1.4",
     "framer-motion": "^11.5.4",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.21",
     "next-client-cookies": "^1.1.1",
     "plotly.js": "^2.35.2",
@@ -42,7 +46,9 @@
     "react-leaflet": "^4.2.1",
     "react-plotly.js": "^2.6.0",
     "react-select": "^5.9.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
