--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nivo/line": "^0.87.0",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.3",
     "@react-aria/i18n": "^3.12.3",
     "@types/react-leaflet": "^2.8.3",
     "@types/react-select": "^5.0.0",
