--- a/package.json
+++ b/package.json
@@ -11,16 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/date-picker": "^2.1.8",
-    "@nextui-org/dropdown": "^2.1.31",
-    "@nextui-org/react": "^2.6.5",
-    "@nextui-org/select": "^2.2.7",
-    "@nextui-org/spinner": "^2.0.34",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.11",
-    "@nivo/line": "^0.87.0",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.3",
     "@react-aria/i18n": "^3.12.3",
